fixing the spacing between sidebar and main context

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -5,7 +5,7 @@ $base-font-size:   1rem !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
-$spacing-unit:     15px !default;
+$spacing-unit:     20px !default;
 $content-width:    800px !default;
 $usable-width: $content-width - 2 * $spacing-unit;
 
